<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AWSome.Link</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">Display Message</string>
    <string name="action_search">Search</string>
    <string name="Outbox">Outbox</string>
    <string name="Inbox">Inbox</string>
    <string name="select_action">Select action</string>
    <string name="empty">Empty</string>
    <string name="Add">Add</string>
    <string name="Addresses">Address book</string>
    <string name="Images">Images</string>
    <string name="Video">Video</string>
    <string name="File">File</string>
    <string name="from_camera">Camera</string>
    <string name="from_camera_big">Camera (High quality)</string>
    <string name="from_camera_small">Camera (Low quality)</string>
    <string name="from_gallery">Галерея</string>
    <string name="Contacts">Contacts</string>
    <string name="Selected">Selected</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="select_reverse">Reverse selection</string>
    <string name="loading">Loading…</string>
    <string name="Make_link">Make link</string>
    <string name="Nothing_selected">Nothing selected</string>
    <string name="Share">Share</string>
    <string name="Files">Files</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Synchronize">Synchronize</string>0
    <string name="Error">Error!</string>
    <string name="Add_new_link">Add new link</string>
    <string name="Link">Ссылка</string>
    <string name="title_activity_link">Link</string>
    <string name="hello_world">Hello world!</string>
    <string name="Description">Desription</string>
    <string name="Password_Optional">Password (optional)</string>
    <string name="Password">Password</string>
    <string name="Dump"></string>
</resources>
